# app-edu-mvp

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
nbook/: marimo_nbook.py
nbook/streamlit/: streamlit_app.py
req_files/: requirements.nbook.txt  requirements.txt
scripts/: install.sh  start.sh
