[project]
name = "app-edu-mvp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "streamlit>=1.49.1",
    "streamlit-extras>=0.7.8",
    "streamlit-shadcn-ui>=0.1.18",
]

[dependency-groups]
nbook = [
    "marimo[recommended]>=0.16.0",
]
